Thu Sep 26 21:49:16 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/BiDir_GIOP/BiDirGIOP.h:
	* tao/BiDir_GIOP/BiDirGIOP.cpp: Prevent activate () from being
	  called more than once. Thanks to Erich Hochmuth
	  <erich_hochmuth@hotmail.com> for reporting this.

Thu Sep 26 17:38:30 2002  Ossama Othman  <ossama@uci.edu>

	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp
	  (gen_encapsulation):

	  Fixed "unused variable" warning.

Thu Sep 26 18:23:11 2002  Jeff Parsons <parsons@isis-server.isis.vanderbilt.edu>

        * TAO_IDL/be/be_visitor_module/module_ch.cpp:
        * TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:

	  Cosmetic changes.

        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/y.tab.cpp:

	  Modified the action code for the 'typeprefix' production as follows:
	  if the typeprefix occurs in a module and is applied to that module,
	  we apply the prefix to the current scope instead of doing a lookup
	  on the scope's name. In the case of a reopened module, a lookup will 
	  return the previous opening, and the prefix will not be applied to
	  the current opening. To determine if the above conditions hold, the
	  current scope's name and the first typeprefix argument are compared.
	  Thanks to Nanbor <nanbor@cse.wustl.edu> for pointing out the
	  problem.

        * TAO_IDL/util/utl_idlist.cpp:

	  Modified the compare() method to ignore any leading empty segments.

Thu Sep 26 17:06:11 2002  Balachandran Natarajan  <bala@isis-server.vuse.vanderbilt.edu>

	* tao/Any.cpp: In operator<< (TAO_OutputCDR& cdr, const CORBA::Any
	  &), we could make use of the CDR inside the Any and append that
	  to the CDR stream instead of doing an interpretive marshalling
	  on the Any. We cannot do this if the byte orders of the CDR and
	  the Any are different. Hence we have a conditional optimization
	  that appends the CDR from the Any only if the byte orders are
	  same, else it will fallback to do an interpretive marshalling. 
