@@ -1,3 +1,9 @@
+Fri Sep 27 09:49:39 2002  Ossama Othman  <ossama@uci.edu>
+
+	* docs/releasenotes/index.html:
+
+	  Updated load balancer release notes.
+
 Thu Sep 26 21:49:16 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* tao/BiDir_GIOP/BiDirGIOP.h:
